:refactored :fixed hover charts && fixed value input && fixed visibled sum

--- a/src/Components/Statistic/Statistic.module.css
+++ b/src/Components/Statistic/Statistic.module.css
@@ -24,6 +24,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   box-shadow: 6px 10px 18px rgba(1, 1, 0, 0.1);
+  z-index: -72;
 }
 
 .WrapperSelect {
